--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "mongoose": "^5.2.17",
+    "ngx-pipes": "^2.3.5",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
