--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/jquery": "^3.2.12",
     "angular-in-memory-web-api": "^0.6.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "moment": "^2.19.1",
     "mongoose": "^5.2.17",
+    "ng2-daterangepicker": "^2.0.12",
     "ngx-pipes": "^2.3.5",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
