--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.2.2",
     "@types/jquery": "^3.2.12",
     "angular-in-memory-web-api": "^0.6.1",
     "bootstrap": "^4.1.3",
@@ -32,6 +33,7 @@
     "mongoose": "^5.2.17",
     "ng2-daterangepicker": "^2.0.12",
     "ngx-pipes": "^2.3.5",
+    "ngx-toastr": "^9.1.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
